--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
+    // "typeRoots": ["@types/*.d.ts"],
     "jsx": "preserve",
     "incremental": true
   },
