--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@types/react-outside-click-handler": "^1.3.1",
     "axios": "^1.0.0",
     "emotion": "^11.0.0",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-outside-click-handler": "^1.3.0",
     "react-query": "^3.39.2"
   },
   "devDependencies": {
