--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@emotion/styled": "^11.10.4",
     "@types/react-outside-click-handler": "^1.3.1",
     "axios": "^1.0.0",
+    "cookie-cutter": "^0.2.0",
+    "cookies": "^0.8.0",
     "emotion": "^11.0.0",
     "next": "12.3.1",
+    "next-cookies": "^2.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-outside-click-handler": "^1.3.0",
